--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-
-    <audio id="bg-music" loop>
+<audio id="bg-music" loop controls style="position:fixed; bottom:10px; left:10px; z-index:9999;">
         <source src="song.mp3" type="audio/mpeg">
     </audio>
 
@@ -454,3 +453,4 @@
     </script>
 </body>
 </html>
+
