--- a/index.html
+++ b/index.html
@@ -170,9 +170,10 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-<audio id="bg-music" loop controls style="position:fixed; bottom:10px; left:10px; z-index:9999;">
-        <source src="song.mp3" type="audio/mpeg">
-    </audio>
+<audio id="bg-music" loop>
+    <source src="https://od.lk/s/OTFfMjk2ODQ2MTFf/AboutYou.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
 
     <button class="theme-toggle" onclick="toggleTheme()">☀️/🌙</button>
 
@@ -453,4 +454,5 @@
     </script>
 </body>
 </html>
+
 
