--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
         <div class="card cat-card">
             <lottie-player 
-                src="https://assets10.lottiefiles.com/packages/lf20_C3K0Hh.json"  
+                src="cat.json"  
                 background="transparent"  
                 speed="1"  
                 style="width: 150px; height: 150px;"  
@@ -301,3 +301,4 @@
     </script>
 </body>
 </html>
+
